{
  "version": 4,
  "terraform_version": "1.0.2",
  "serial": 250,
  "lineage": "6f19a08b-9e59-ccfb-f2a8-3b94217ffdc7",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/plagood-abhishek/global/networks/tf-lb-http-mig-nat",
            "mtu": 0,
            "name": "tf-lb-http-mig-nat",
            "project": "plagood-abhishek",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/plagood-abhishek/global/networks/tf-lb-http-mig-nat"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-07-14T01:58:45.891-07:00",
            "id": "projects/plagood-abhishek/regions/us-west1/routers/lb-http-router",
            "name": "lb-http-router",
            "network": "https://www.googleapis.com/compute/v1/projects/plagood-abhishek/global/networks/tf-lb-http-mig-nat",
            "project": "plagood-abhishek",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/plagood-abhishek/regions/us-west1/routers/lb-http-router"
          },
          "dependencies": [
            "google_compute_network.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-07-14T01:58:46.488-07:00",
            "gateway_address": "10.127.0.1",
            "id": "projects/plagood-abhishek/regions/us-west1/subnetworks/tf-lb-http-mig-nat",
            "ip_cidr_range": "10.127.0.0/20",
            "name": "tf-lb-http-mig-nat",
            "network": "https://www.googleapis.com/compute/v1/projects/plagood-abhishek/global/networks/tf-lb-http-mig-nat",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "plagood-abhishek",
            "purpose": "PRIVATE",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/plagood-abhishek/regions/us-west1/subnetworks/tf-lb-http-mig-nat",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.cloud-nat",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "plagood-abhishek/us-west1/lb-http-router/cloud-nat-lb-http-router",
            "min_ports_per_vm": 64,
            "name": "cloud-nat-lb-http-router",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "plagood-abhishek",
            "region": "us-west1",
            "router": "lb-http-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.default",
            "google_compute_router.default",
            "module.cloud-nat.google_compute_router.router",
            "module.cloud-nat.random_string.name_suffix"
          ]
        }
      ]
    },
    {
      "module": "module.gce-lb-http",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": "default",
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "RATE",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/plagood-abhishek/regions/us-west1/instanceGroups/tf-lb-http-mig-nat-mig",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 60,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2022-07-14T01:59:40.448-07:00",
            "enable_cdn": false,
            "fingerprint": "slGe9NwKtwk=",
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/plagood-abhishek/global/healthChecks/plagood-http-lb-hc-default"
            ],
            "id": "projects/plagood-abhishek/global/backendServices/plagood-http-lb-backend-default",
            "load_balancing_scheme": "EXTERNAL",
            "name": "plagood-http-lb-backend-default",
            "port_name": "http",
            "project": "plagood-abhishek",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/plagood-abhishek/global/backendServices/plagood-http-lb-backend-default",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "data.template_file.group-startup-script",
            "google_compute_network.default",
            "google_compute_router.default",
            "google_compute_subnetwork.default",
            "module.cloud-nat.google_compute_router.router",
            "module.gce-lb-http.google_compute_health_check.default",
            "module.plagood.data.google_compute_zones.available",
            "module.plagood.google_compute_health_check.http",
            "module.plagood.google_compute_health_check.tcp",
            "module.plagood.google_compute_region_instance_group_manager.mig",
            "module.plagood_template.data.google_compute_image.image",
            "module.plagood_template.data.google_compute_image.image_family",
            "module.plagood_template.google_compute_instance_template.tpl"
          ]
        }
      ]
    },
    {
      "module": "module.gce-lb-http",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default-hc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-07-14T01:59:27.916-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/plagood-abhishek/global/firewalls/plagood-http-lb-hc-0",
            "log_config": [],
            "name": "plagood-http-lb-hc-0",
            "network": "https://www.googleapis.com/compute/v1/projects/plagood-abhishek/global/networks/tf-lb-http-mig-nat",
            "priority": 1000,
            "project": "plagood-abhishek",
            "self_link": "https://www.googleapis.com/compute/v1/projects/plagood-abhishek/global/firewalls/plagood-http-lb-hc-0",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "tf-lb-http-mig-nat"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.template_file.group-startup-script",
            "google_compute_network.default",
            "google_compute_router.default",
            "google_compute_subnetwork.default",
            "module.cloud-nat.google_compute_router.router",
            "module.plagood.data.google_compute_zones.available",
            "module.plagood.google_compute_health_check.http",
            "module.plagood.google_compute_health_check.tcp",
            "module.plagood.google_compute_region_instance_group_manager.mig",
            "module.plagood_template.data.google_compute_image.image",
            "module.plagood_template.data.google_compute_image.image_family",
            "module.plagood_template.google_compute_instance_template.tpl"
          ]
        }
      ]
    },
    {
      "module": "module.gce-lb-http",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address": "34.107.164.197",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2022-07-14T01:58:32.292-07:00",
            "id": "projects/plagood-abhishek/global/addresses/plagood-http-lb-address",
            "name": "plagood-http-lb-address",
            "prefix_length": 0,
            "project": "plagood-abhishek",
            "self_link": "https://www.googleapis.com/compute/v1/projects/plagood-abhishek/global/addresses/plagood-http-lb-address"
          }
        }
      ]
    },
    {
      "module": "module.gce-lb-http",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "projects/plagood-abhishek/global/forwardingRules/plagood-http-lb",
            "ip_address": "34.107.164.197",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "plagood-http-lb",
            "port_range": "80",
            "project": "plagood-abhishek",
            "self_link": "https://www.googleapis.com/compute/v1/projects/plagood-abhishek/global/forwardingRules/plagood-http-lb",
            "target": "https://www.googleapis.com/compute/v1/projects/plagood-abhishek/global/targetHttpProxies/plagood-http-lb-http-proxy"
          },
          "dependencies": [
            "data.template_file.group-startup-script",
            "google_compute_network.default",
            "google_compute_router.default",
            "google_compute_subnetwork.default",
            "module.cloud-nat.google_compute_router.router",
            "module.gce-lb-http.google_compute_backend_service.default",
            "module.gce-lb-http.google_compute_global_address.default",
            "module.gce-lb-http.google_compute_health_check.default",
            "module.gce-lb-http.google_compute_target_http_proxy.default",
            "module.gce-lb-http.google_compute_url_map.default",
            "module.gce-lb-http.google_compute_url_map.https_redirect",
            "module.plagood.data.google_compute_zones.available",
            "module.plagood.google_compute_health_check.http",
            "module.plagood.google_compute_health_check.tcp",
            "module.plagood.google_compute_region_instance_group_manager.mig",
            "module.plagood_template.data.google_compute_image.image",
            "module.plagood_template.data.google_compute_image.image_family",
            "module.plagood_template.google_compute_instance_template.tpl"
          ]
        }
      ]
    },
    {
      "module": "module.gce-lb-http",
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-07-14T02:00:16.042-07:00",
            "id": "projects/plagood-abhishek/global/targetHttpProxies/plagood-http-lb-http-proxy",
            "name": "plagood-http-lb-http-proxy",
            "project": "plagood-abhishek",
            "proxy_bind": false,
            "proxy_id": 8153569075291599,
            "self_link": "https://www.googleapis.com/compute/v1/projects/plagood-abhishek/global/targetHttpProxies/plagood-http-lb-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/plagood-abhishek/global/urlMaps/plagood-http-lb-url-map"
          },
          "dependencies": [
            "data.template_file.group-startup-script",
            "google_compute_network.default",
            "google_compute_router.default",
            "google_compute_subnetwork.default",
            "module.cloud-nat.google_compute_router.router",
            "module.gce-lb-http.google_compute_backend_service.default",
            "module.gce-lb-http.google_compute_health_check.default",
            "module.gce-lb-http.google_compute_url_map.default",
            "module.gce-lb-http.google_compute_url_map.https_redirect",
            "module.plagood.data.google_compute_zones.available",
            "module.plagood.google_compute_health_check.http",
            "module.plagood.google_compute_health_check.tcp",
            "module.plagood.google_compute_region_instance_group_manager.mig",
            "module.plagood_template.data.google_compute_image.image",
            "module.plagood_template.data.google_compute_image.image_family",
            "module.plagood_template.google_compute_instance_template.tpl"
          ]
        }
      ]
    },
    {
      "module": "module.gce-lb-http",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-07-14T02:00:03.506-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/plagood-abhishek/global/backendServices/plagood-http-lb-backend-default",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "caHbuF8hBrA=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/plagood-abhishek/global/urlMaps/plagood-http-lb-url-map",
            "map_id": 1241589892117587452,
            "name": "plagood-http-lb-url-map",
            "path_matcher": [],
            "project": "plagood-abhishek",
            "self_link": "https://www.googleapis.com/compute/v1/projects/plagood-abhishek/global/urlMaps/plagood-http-lb-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.template_file.group-startup-script",
            "google_compute_network.default",
            "google_compute_router.default",
            "google_compute_subnetwork.default",
            "module.cloud-nat.google_compute_router.router",
            "module.gce-lb-http.google_compute_backend_service.default",
            "module.gce-lb-http.google_compute_health_check.default",
            "module.plagood.data.google_compute_zones.available",
            "module.plagood.google_compute_health_check.http",
            "module.plagood.google_compute_health_check.tcp",
            "module.plagood.google_compute_region_instance_group_manager.mig",
            "module.plagood_template.data.google_compute_image.image",
            "module.plagood_template.data.google_compute_image.image_family",
            "module.plagood_template.google_compute_instance_template.tpl"
          ]
        }
      ]
    }
  ]
}